--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-  <script type="module" src="https://cdn.skypack.dev/arabic-virtual-keyboard"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/arabic-virtual-keyboard@0.2.7/+esm"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1" /> %sveltekit.head%
 </head>
 
