--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%sveltekit.assets%/favicon.png" />
   <script type="module" src="https://cdn.jsdelivr.net/npm/arabic-virtual-keyboard@0.2.7/+esm"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1" /> %sveltekit.head%
 </head>
 
