fix: text not connecting

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%sveltekit.assets%/favicon.png" />
   <script type="module" src="https://cdn.jsdelivr.net/npm/arabic-virtual-keyboard@0.2.8/+esm"></script>
+  <script src="https://bundle.run/pixelmatch@5.2.1"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap" rel="stylesheet">
