make changes to stories

--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,8 @@
   <link rel="icon" href="%sveltekit.assets%/favicon.png" />
   <script type="module" src="https://cdn.jsdelivr.net/npm/arabic-virtual-keyboard@0.2.8/+esm"></script>
   <script src="https://bundle.run/pixelmatch@5.2.1"></script>
+  <script defer id="site-behaviour-script" data-secret="e25ce093-4111-4e8b-9dc0-f6b715e69c3a" src="https://sitebehaviour-cdn.fra1.cdn.digitaloceanspaces.com/index.min.js">
+  </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap" rel="stylesheet">
