--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="/images/favicon.png" />
-
+  <meta name="description" content="Language learning platform for Egyptian Arabic">
+  <meta name="keywords" content="Arabic, Egyptian Arabic, Learn Arabic">
+  <meta name="author" content="Sherif Elmetwally">
   <script type="module" src="https://cdn.jsdelivr.net/npm/arabic-virtual-keyboard@0.2.8/+esm"></script>
   <script src="https://bundle.run/pixelmatch@5.2.1"></script>
   <script src="https://cdn.skypack.dev/lottie-web"></script>
