--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/images/favicon.png" />
+  <link rel="icon" href="/icons/fav.png" />
   <meta name="description" content="Language learning platform for Egyptian Arabic">
   <meta name="keywords" content="Arabic, Egyptian Arabic, Learn Arabic">
   <meta name="author" content="Sherif Elmetwally">
@@ -15,11 +15,49 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1" /> %sveltekit.head%
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Add these PWA meta tags -->
+  <meta name="theme-color" content="#365463" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Parallel Arabic" />
+
+  <!-- Manifest link -->
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="apple-touch-icon" href="/icons/icon.png" /> %sveltekit.head%
 </head>
 
 <body data-sveltekit-preload-data="hover">
   <div style="display: contents">%sveltekit.body%</div>
+
+  <!-- Service Worker Registration -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', async() => {
+        try {
+          // Check if service worker file exists
+          const response = await fetch('/sw.js', {
+            method: 'HEAD'
+          });
+          if (response.ok) {
+            await navigator.serviceWorker.register('/sw.js', {
+              scope: '/'
+            });
+            console.log('Service Worker registered successfully');
+          }
+        } catch (error) {
+          // Silently fail in dev mode
+          if (
+            import.meta.env.DEV) {
+            console.log('Service Worker not available in dev mode');
+          } else {
+            console.error('Service Worker registration failed:', error);
+          }
+        }
+      });
+    }
+  </script>
 </body>
 
 </html>
