try and fix cache

--- a/src/app.html
+++ b/src/app.html
@@ -20,6 +20,7 @@
   <!-- PWA meta tags -->
   <meta name="theme-color" content="#365463" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Parallel Arabic" />
   <link rel="apple-touch-icon" href="/icons/icon.png" />
