try and boost seo

--- a/src/app.html
+++ b/src/app.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="/icons/fav.png" />
-  <meta name="description" content="Language learning platform for Egyptian Arabic">
-  <meta name="keywords" content="Arabic, Egyptian Arabic, Learn Arabic">
+  <meta name="description" content="Learn Arabic dialects (Egyptian, Levantine, Moroccan Darija, Modern Standard Arabic) through interactive lessons, stories, vocabulary practice, and AI-powered conversation tutoring.">
+  <meta name="keywords" content="Arabic, Egyptian Arabic, Levantine Arabic, Moroccan Darija, Modern Standard Arabic, Learn Arabic, Arabic lessons, Arabic stories, Arabic vocabulary, Arabic tutor, Arabic dialects">
   <meta name="author" content="Sherif Elmetwally">
   
   <!-- Debug: Log when head starts loading -->
